--- a/Joshweb.html
+++ b/Joshweb.html
@@ -23,6 +23,7 @@
             row-gap: 20px;
             column-gap: 10px;
             justify-content: space-around;
+            margin-top: 20px;
         }
         .content{
             width: 200px;
@@ -39,16 +40,16 @@
         <h1>MOVIENET</h1>
     </nav>
     <div class="container">
-        <div class="content"></div><button>download</button>
-        <div class="content"></div><button>download</button>
-        <div class="content"></div><button>download</button>
-        <div class="content"></div><button>download</button>
-        <div class="content"></div><button>download</button>
-        <div class="content"></div><button>download</button>
-        <div class="content"></div><button>download</button>
-        <div class="content"></div><button>download</button>
-        <div class="content"></div><button>download</button>
-        <div class="content"></div><button>download</button>
+        <div class="content"></div>
+        <div class="content"></div>
+        <div class="content"></div>
+        <div class="content"></div>
+        <div class="content"></div>
+        <div class="content"></div>
+        <div class="content"></div>
+        <div class="content"></div>
+        <div class="content"></div>
+        <div class="content"></div>
     </div>
 </body>
 </html>
